--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h2>Listas para hornear o congelar en casa </h2>
     <img src="menu.jpeg" width="500" height="400" alt="flyer">
     <div> 
-<h1> <em> Pedido minimo de 3 pizzas </em></h1>
+<h1> <em> Pedido mínimo de 3 pizzas </em></h1>
 <h1> <em> Costo por pizza 10.000</em></h1>
 <h5> <em> Valor del domicilio a calcular, si supera los 10.000 pagamos el excedente</em></h5>
 
@@ -28,9 +28,9 @@
 
 <div class="spacer"></div>
 
-<h5> 
-  ®GourmeFloral2019
-</h5>
+ 
+   <p> ®GourmeFloral2019 </p>
+
     
     <script src="script.js"></script>
   </body>
