--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <img src="logo.png" width="700" height="250" alt="Logo de la pizzería">  
       </div>
       
-      <h1><em>¡Bienvenido a nuestro servicio de pedidos en línea!</em></h1>
+      <h1>¡pedidos en línea!</h1>
     </header>
-    <h2>Listas para hornear o congelar en casa </h2>
+     <p>  <em>  Listas para hornear o congelar en casa </em> </p>  
     <img src="menu.jpeg" width="500" height="400" alt="flyer">
     <div> 
 <h1> <em> Pedido mínimo de 3 pizzas </em></h1>
