--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <h1>¡pedidos en línea!</h1>
       
     </header>
+      <button id="btn-play">Ver presentación</button>
 
     <video id="video" src="Amanecergourmetf.mp4" width="640" height="360"c></video>
 
