--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <div class="logo">
         <img src="logo.jpeg"  alt="LogoGourmetFloral">  
       </div>
+      <button id="btn-play">Ver presentación</button>
       <h1>¡pedidos en línea!</h1>
       
     </header>
@@ -23,8 +24,8 @@
     <div> 
       <h1> <em> Pedido mínimo de 3 pizzas </em></h1>
       <h1> <em> Costo por pizza 10.000</em></h1>
-      <h5> <em> Valor del domicilio a calcular, si supera los 10.000 pagamos el excedente</em></h5>
-      <a href="https://api.whatsapp.com/send?phone=573212192890&text=Hola%20quiero%20hacer%20un%20pedido" target="_blank" rel="noopener noreferrer"> WhatsApp</a>
+      <h5> <em> En zona norte 35.000 con domicilio, general 40.000 con domicilio, si supera los 12.000 pagas el excedente</em></h5>
+      <a href="https://api.whatsapp.com/send?phone=573160533996&text=Hola%20quiero%20hacer%20un%20pedido" target="_blank" rel="noopener noreferrer"> WhatsApp</a>
     </div>
     <div class="spacer"></div>
     <div class="spacer"></div>
