--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
 
 
             <h1>¡Pedidos en línea!</h1>
+
+                       <div class= "boton-verde"> 
+                <a href="https://api.whatsapp.com/send?phone=573160533996&text=Hola%20quiero%20hacer%20un%20pedido" target="_blank" rel="noopener noreferrer" >Pide Aquí</a>
+
         </header>
 
 
