--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9130621743704423"
+     crossorigin="anonymous"></script>
+
     <style>
       /* Estilo del botón */
       .boton-verde {
